<resources>
    <string name="app_name">Job Now</string>
    <string name="create_job_activity">Create New Job</string>
    <string name="update_preferences_activity">Update Job Preferences</string>
    <string name="job_preview_activity">Job Preview</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_share">Share</string>

    <!--    HARDCODED-->
    <string name="hardcoded_userName">Nume Prenume1 Prenume2</string>
    <string name="hardcoded_userEmail">nume.prenume@email.com</string>
    <string name="hardcoded_userMoney">1860.80 RON</string>

    <!--    FIRST TIME ACTIVITY-->
    <string name="log_in_button_text">Log in</string>
    <string name="register_button_text">Register</string>
    <string name="register_to_login_text">Already have an account?</string>
    <string name="register_unknow_error">Something went wrong while we tried to create your account!</string>
    <string name="login_unknow_error">Something went wrong while connecting to the server!</string>
    <string name="login_email_pasword_no_match">Incorect username and password combination!</string>

    <string name="register_full_name">Full Name</string>
    <string name="hint_full_name">Your name goes here!</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>

    <!--    MAP ACTIVITY-->
    <string name="pick_job_location">Pick Location</string>
    <string name="error_cannot_find_location">We are unable to find your current location!</string>
    <string name="error_no_marker_on_map">You need to put a pinpoint on the map!</string>

    <!--    MENU ITEMS-->
    <string name="menu_stats">Statistics</string>
    <string name="menu_jobSearch">Search For Jobs</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_jobApplied">Jobs you applied for</string>
    <string name="menu_jobAdded">Jobs you added</string>
    <string name="menu_help">Help</string>

    <string name="menu_support_title">Support</string>

    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_back">Back</string>

    <!--    JOB PANEL ACTIVITY-->
    <string name="apply_button_text">Apply for this job!</string>
    <string name="error_loading_job">There was an error while loading this job!</string>
    <string name="no_description">No Description available</string>
    <string name="job_accepted">We will notify the owner of this job about your interest!</string>

    <!--    UPDATE PREFERENCES ACTIVITY-->
    <string name="price_label">Price</string>
    <string name="distance_label">Distance</string>
    <string name="min_label">Min</string>
    <string name="max_label">Max</string>

    <!--    CREATE JOB ACTIVITY-->
    <string name="label_title">Task Name</string>
    <string name="label_price">Price</string>
    <string name="label_description">Description</string>
    <string name="label_category">Category</string>
    <string name="label_location">Location</string>
    <string name="create_job_description_placeholder">Is there something more you should tell us?</string>
    <string name="create_job_button_text">List Your Job</string>
    <string name="create_job_successful">Congratulation! Your job has been listed</string>
    <string name="create_job_failed">There was a problem while adding this job! Please try again later</string>

    <string name="no_price">Free</string>

    <string name="create_job_dialog_category_sugestions">Sugestions</string>
    <string name="create_job_dialog_category_added">You have added</string>

    <string name="error_job_title_only_alphanumeric">Only Letters and digits are allowed</string>
    <string name="error_job_title_too_short">Please write something more descriptive</string>
    <string name="error_job_title_empty">You need to write something here</string>
    <string name="error_category_selected">You need to select at least one category</string>
    <string name="error_too_much_category_selected">You can select maximum 5 categories</string>
    <string name="error_no_location_selected">You didn`t select job location</string>
    <string name="error_forms_not_completed_properly">Ops! It looks like some forms have not been completed properly!</string>

    <string name="dialog_confirm_data_title">Is this information correct?</string>
    <string name="dialog_edit_categories_title">Edit Categories</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_security">SecurityActivity</string>


</resources>
