<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/big_margin"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/background_item_form"
                    android:hint="@string/register_full_name"
                    android:padding="@dimen/medium_padding"
                    app:counterEnabled="true"
                    app:counterMaxLength="@integer/full_name_max_length"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_full_name"
                        android:inputType="textEmailAddress"
                        android:maxLength="@integer/full_name_max_length"
                        android:textColorHint="@drawable/text_layout_invisible_label" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/background_item_form"
                    android:hint="@string/register_email"
                    android:padding="@dimen/medium_padding"
                    app:counterEnabled="true"
                    app:counterMaxLength="@integer/email_max_length"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:layout_height="match_parent"
                        android:maxLength="@integer/email_max_length" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/background_item_form"
                    android:hint="@string/register_password"
                    android:padding="@dimen/medium_padding"
                    app:counterEnabled="true"
                    app:counterMaxLength="@integer/password_max_length"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:maxLength="@integer/password_max_length" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_vertical_spacing"
                    android:text="@string/register_button_text"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/register_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_vertical_spacing"
                    android:textAlignment="center"
                    android:textColor="@color/red" />

            </LinearLayout>

            <Button
                android:id="@+id/register_to_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_layout"
                android:layout_marginTop="@dimen/form_vertical_spacing"
                android:text="@string/register_to_login_text"
                android:layout_marginBottom="50dp"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>