<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.updatePreferences.UpdateJobPreferencesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/medium_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/background_item_form"
                android:orientation="vertical"
                android:padding="@dimen/medium_padding">

                <TextView
                    android:id="@+id/price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_label"
                    android:textSize="@dimen/title_font_size" />

                <com.jaygoo.widget.RangeSeekBar
                    android:id="@+id/seekbar_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cellMode="number"
                    app:lineColorEdge="@color/colorSeekBarDefault"
                    app:lineColorSelected="@color/colorAccent"
                    app:seekBarMode="range"
                    app:thumbPrimaryColor="@color/colorAccentDark"
                    app:thumbSize="20dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/minPrice_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/medium_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:text="@string/min_label"
                            android:textSize="@dimen/label_font_size" />

                        <TextView
                            android:id="@+id/min_price"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/label_font_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:text="@string/max_label"
                            android:textSize="@dimen/label_font_size" />

                        <TextView
                            android:id="@+id/max_price"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/label_font_size" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/background_item_form"
                android:padding="@dimen/medium_padding">

                <TextView
                    android:id="@+id/distance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/distance_label"
                    android:textSize="@dimen/title_font_size" />

                <SeekBar
                    android:id="@+id/seekbar_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/small_margin"
                    android:layout_toStartOf="@+id/maxDistance_layout"
                    android:layout_toEndOf="@+id/distance_label" />

                <LinearLayout
                    android:id="@+id/maxDistance_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/max_distance"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:inputType="number"
                        android:maxLength="3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="km" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/background_item_form"
                android:padding="@dimen/medium_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_category"
                        android:textSize="@dimen/title_font_size" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_preferences_categoty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:background="@drawable/background_item_form"
                        android:padding="@dimen/medium_padding" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/button_addCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_sumbit"
                        android:onClick="showSelectCategoriesDialog"
                        android:padding="@dimen/medium_padding"
                        android:src="@drawable/ic_add_white_24dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_savePreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/absolute_button_margin"
        android:clickable="true"
        android:focusable="true"
        android:onClick="savePreferences"
        android:src="@drawable/ic_save_black_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>